Intermediate and Saved data committed.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,7 +72,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [ModuleFileTracking]
 BuildingEscape.TimeStamp=2018.04.18-23.50.15
@@ -661,7 +661,7 @@ StaticMeshEditor.TimeStamp=2018.04.15-14.30.09
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=2240.000 Y=165.000
