--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -702,6 +702,8 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=../../../../../../Users/James/Documents/Unreal Projects/Section_03/BuildingEscape/Content/Maps
@@ -728,6 +730,11 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Oak.M_Wood_Oak;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Floor_Walnut_Worn;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
@@ -805,6 +812,35 @@ PointLight.DistanceFieldShadows=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -817,5 +853,22 @@ Value=1.000000
 [AssetEditorToolkitTabLocation]
 /Game/Maps/NewMap.NewMap:PersistentLevel.SM_Chair_2=1
 /Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300=1
+/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss=1
+/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished=1
+/Game/StarterContent/Props/Materials/M_Chair.M_Chair=1
+/Game/StarterContent/Props/Materials/M_Door.M_Door=1
+/Game/StarterContent/Props/Materials/M_Frame.M_Frame=1
+/Game/StarterContent/Textures/T_Brick_Clay_New_D.T_Brick_Clay_New_D=1
+/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New=1
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+PrimType=1
+
+[DetailCategoriesAdvanced]
+Texture2D.Texture=False
 
 
