Pressure plate trigger volume added.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.04.18-23.50.15
+BuildingEscape.TimeStamp=2018.04.20-22.10.18
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -730,6 +730,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
@@ -841,6 +842,14 @@ Texture2D.Adjustments=True
 Texture2D.Compositing=True
 MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
+TriggerVolume.TransformCommon=True
+TriggerVolume.Collision=True
+TriggerVolume.Tags=True
+TriggerVolume.Cooking=True
+TriggerVolume.BrushSettings=True
+TriggerVolume.Actor=True
+OpenDoor.OpenDoor=True
+OpenDoor.Collision=True
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -870,5 +879,10 @@ PrimType=1
 
 [DetailCategoriesAdvanced]
 Texture2D.Texture=False
+
+[DetailPropertyExpansion]
+TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 
