Get the doors to open.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.04.20-22.10.18
+BuildingEscape.TimeStamp=2018.04.20-22.32.39
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -850,6 +850,27 @@ TriggerVolume.BrushSettings=True
 TriggerVolume.Actor=True
 OpenDoor.OpenDoor=True
 OpenDoor.Collision=True
+DefaultPawn.TransformCommon=True
+DefaultPawn.StaticMesh=True
+DefaultPawn.Materials=True
+DefaultPawn.Pawn=True
+DefaultPawn.FloatingPawnMovement=True
+DefaultPawn.NavMovement=True
+DefaultPawn.Physics=True
+DefaultPawn.Velocity=True
+DefaultPawn.PlanarMovement=True
+DefaultPawn.Collision=True
+DefaultPawn.Lighting=True
+DefaultPawn.MovementComponent=True
+DefaultPawn.Tags=True
+DefaultPawn.Rendering=True
+DefaultPawn.Activation=True
+DefaultPawn.Cooking=True
+DefaultPawn.Shape=True
+DefaultPawn.Navigation=True
+DefaultPawn.Camera=True
+DefaultPawn.Input=True
+DefaultPawn.Actor=True
 
 [MessageLog]
 LastLogListing=MapCheck
