Added glass ceiling.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -728,8 +728,10 @@ MRUItem2=/Game/Maps/Untitled
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+QualityLevel=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
@@ -747,8 +749,8 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
-StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
+StaticMeshActor.Materials=False
+StaticMeshActor.Physics=False
 StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=True
 StaticMeshActor.Rendering=True
@@ -1079,10 +1081,14 @@ Value=1.000000
 /Game/StarterContent/Props/Materials/M_Frame.M_Frame=1
 /Game/StarterContent/Textures/T_Brick_Clay_New_D.T_Brick_Clay_New_D=1
 /Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New=1
+/Game/StarterContent/Props/SM_Door.SM_Door=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
 bShowMobileStats=False
+
+[DetailCustomWidgetExpansion]
+StaticMeshActor=StaticMeshActor.Collision.Collision,
 
 [MaterialEditor]
 PrimType=1
@@ -1096,5 +1102,6 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 
 
