Player can now get through an open door!

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,10 +72,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [EditorStartup]
-LastLevel=/Game/Maps/NewMap
+LastLevel=/Game/Maps/Room1
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.04.20-22.45.12
+BuildingEscape.TimeStamp=2018.04.22-14.14.04
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -665,7 +665,7 @@ ExternalImagePicker.TimeStamp=2018.04.15-14.29.55
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=2240.000 Y=165.000
@@ -1110,6 +1110,8 @@ Value=1.000000
 /Game/StarterContent/Textures/T_Brick_Clay_New_D.T_Brick_Clay_New_D=1
 /Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New=1
 /Game/StarterContent/Props/SM_Door.SM_Door=1
+/Engine/EngineMeshes/Cube.Cube=1
+/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1129,7 +1131,7 @@ TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+Object=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 
 
