Simplified to one door, added timer to close door after getting off pressure plate.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/Room1
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.04.22-14.14.04
+BuildingEscape.TimeStamp=2018.04.22-14.22.03
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -756,7 +756,7 @@ StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=False
 StaticMeshActor.Physics=False
-StaticMeshActor.Collision=True
+StaticMeshActor.Collision=False
 StaticMeshActor.Lighting=True
 StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
