Starting default pawn building.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/Room1
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.04.22-14.22.03
+BuildingEscape.TimeStamp=2018.04.22-14.48.22
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -735,6 +735,7 @@ OnlyBuildVisibility=False
 QualityLevel=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/DefaultPawn_BP.DefaultPawn_BP;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -1090,6 +1091,72 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+DefaultPawn_BP_C.TransformCommon=True
+DefaultPawn_BP_C.StaticMesh=True
+DefaultPawn_BP_C.Materials=True
+DefaultPawn_BP_C.Pawn=True
+DefaultPawn_BP_C.FloatingPawnMovement=True
+DefaultPawn_BP_C.NavMovement=True
+DefaultPawn_BP_C.Physics=True
+DefaultPawn_BP_C.Velocity=True
+DefaultPawn_BP_C.PlanarMovement=True
+DefaultPawn_BP_C.Collision=True
+DefaultPawn_BP_C.Lighting=True
+DefaultPawn_BP_C.MovementComponent=True
+DefaultPawn_BP_C.Tags=True
+DefaultPawn_BP_C.Rendering=True
+DefaultPawn_BP_C.Activation=True
+DefaultPawn_BP_C.Cooking=True
+DefaultPawn_BP_C.Shape=True
+DefaultPawn_BP_C.Navigation=True
+DefaultPawn_BP_C.Camera=True
+DefaultPawn_BP_C.Input=True
+DefaultPawn_BP_C.Actor=True
+DefaultPawn_BP_C.Tick=True
+DefaultPawn_BP_C.Replication=True
+DefaultPawn_BP_C.ComponentTick=True
+DefaultPawn_BP_C.ComponentReplication=True
+DefaultPawn_BP_C.Variable=True
+DefaultPawn_BP_C.Sockets=True
+DefaultPawn_BP_C.Events=True
+Room1_C.Tick=True
+Room1_C.Replication=True
+Room1_C.Input=True
+Room1_C.Actor=True
+Grabber.Tags=True
+Grabber.Activation=True
+Grabber.Cooking=True
+REINST_DefaultPawn_BP_C_35.TransformCommon=True
+REINST_DefaultPawn_BP_C_35.StaticMesh=True
+REINST_DefaultPawn_BP_C_35.Materials=True
+REINST_DefaultPawn_BP_C_35.Pawn=True
+REINST_DefaultPawn_BP_C_35.FloatingPawnMovement=True
+REINST_DefaultPawn_BP_C_35.NavMovement=True
+REINST_DefaultPawn_BP_C_35.Physics=True
+REINST_DefaultPawn_BP_C_35.Velocity=True
+REINST_DefaultPawn_BP_C_35.PlanarMovement=True
+REINST_DefaultPawn_BP_C_35.Collision=True
+REINST_DefaultPawn_BP_C_35.Lighting=True
+REINST_DefaultPawn_BP_C_35.MovementComponent=True
+REINST_DefaultPawn_BP_C_35.Tags=True
+REINST_DefaultPawn_BP_C_35.Rendering=True
+REINST_DefaultPawn_BP_C_35.Activation=True
+REINST_DefaultPawn_BP_C_35.Cooking=True
+REINST_DefaultPawn_BP_C_35.Shape=True
+REINST_DefaultPawn_BP_C_35.Navigation=True
+REINST_DefaultPawn_BP_C_35.Camera=True
+REINST_DefaultPawn_BP_C_35.Input=True
+REINST_DefaultPawn_BP_C_35.Actor=True
+REINST_DefaultPawn_BP_C_35.Tick=True
+REINST_DefaultPawn_BP_C_35.Replication=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Cooking=True
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1112,6 +1179,8 @@ Value=1.000000
 /Game/StarterContent/Props/SM_Door.SM_Door=1
 /Engine/EngineMeshes/Cube.Cube=1
 /Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame=1
+/Game/DefaultPawn_BP.DefaultPawn_BP=1
+/Game/Maps/Room1.Room1:PersistentLevel.Room1=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
