--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
+GlobalDefaultGameMode=/Game/MyBuildingEscapeGameModeBase.MyBuildingEscapeGameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
