--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/Room1
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.04.22-14.48.22
+BuildingEscape.TimeStamp=2018.04.22-15.11.49
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -1157,6 +1157,14 @@ FloatingPawnMovement.MovementComponent=True
 FloatingPawnMovement.Tags=True
 FloatingPawnMovement.Activation=True
 FloatingPawnMovement.Cooking=True
+MyBuildingEscapeGameModeBase_C.Tick=True
+MyBuildingEscapeGameModeBase_C.Classes=True
+MyBuildingEscapeGameModeBase_C.Game=True
+MyBuildingEscapeGameModeBase_C.GameMode=True
+BuildingEscapeGameModeBase_BP_C.Tick=True
+BuildingEscapeGameModeBase_BP_C.Classes=True
+BuildingEscapeGameModeBase_BP_C.Game=True
+BuildingEscapeGameModeBase_BP_C.GameMode=True
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1181,6 +1189,7 @@ Value=1.000000
 /Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame=1
 /Game/DefaultPawn_BP.DefaultPawn_BP=1
 /Game/Maps/Room1.Room1:PersistentLevel.Room1=1
+/Game/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1188,6 +1197,63 @@ bShowMobileStats=False
 
 [DetailCustomWidgetExpansion]
 StaticMeshActor=StaticMeshActor.Collision.Collision,
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EndUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+OculusHMDRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 
 [MaterialEditor]
 PrimType=1
