Successfully changed default pawn to the Blueprint version.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -860,7 +860,7 @@ OpenDoor.OpenDoor=True
 OpenDoor.Collision=True
 DefaultPawn.TransformCommon=True
 DefaultPawn.StaticMesh=True
-DefaultPawn.Materials=True
+DefaultPawn.Materials=False
 DefaultPawn.Pawn=True
 DefaultPawn.FloatingPawnMovement=True
 DefaultPawn.NavMovement=True
@@ -1093,7 +1093,7 @@ DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
 DefaultPawn_BP_C.TransformCommon=True
 DefaultPawn_BP_C.StaticMesh=True
-DefaultPawn_BP_C.Materials=True
+DefaultPawn_BP_C.Materials=False
 DefaultPawn_BP_C.Pawn=True
 DefaultPawn_BP_C.FloatingPawnMovement=True
 DefaultPawn_BP_C.NavMovement=True
@@ -1165,6 +1165,38 @@ BuildingEscapeGameModeBase_BP_C.Tick=True
 BuildingEscapeGameModeBase_BP_C.Classes=True
 BuildingEscapeGameModeBase_BP_C.Game=True
 BuildingEscapeGameModeBase_BP_C.GameMode=True
+GameModeBase.Classes=True
+GameModeBase.Game=True
+GameModeBase.GameMode=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.Color Grading=True
+CameraActor.Film=True
+CameraActor.Mobile Tonemapper=True
+CameraActor.Lens=True
+CameraActor.Rendering Features=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Cooking=True
+CameraActor.Actor=True
+GameStateBase.Actor=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Input=True
+PlayerController.Actor=True
+PlayerController.LOD=False
 
 [MessageLog]
 LastLogListing=MapCheck
