--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode=/Game/MyBuildingEscapeGameModeBase.MyBuildingEscapeGameModeBase_C
+EditorStartupMap=/Game/Maps/Room1.Room1
+GameDefaultMap=/Game/Maps/Room1.Room1
+GlobalDefaultGameMode=/Game/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -50,5 +50,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
