Introduced grabbing component.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/Room1
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.05.05-19.04.47
+BuildingEscape.TimeStamp=2018.05.05-20.10.30
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -941,7 +941,7 @@ Engine.Framerate=True
 Engine.Screenshots=True
 HierarchicalLODSettings.HLODSystem=True
 InputSettings.Bindings=True
-InputSettings.MouseProperties=True
+InputSettings.MouseProperties=False
 InputSettings.ViewportProperties=True
 InputSettings.Mobile=True
 InputSettings.Console=True
@@ -1284,6 +1284,14 @@ REINST_DefaultPawn_BP_C_45.Navigation=True
 REINST_DefaultPawn_BP_C_45.Camera=True
 REINST_DefaultPawn_BP_C_45.Input=True
 REINST_DefaultPawn_BP_C_45.Actor=True
+PhysicsHandleComponent.Variable=True
+PhysicsHandleComponent.Sockets=True
+PhysicsHandleComponent.PhysicsHandle=True
+PhysicsHandleComponent.Tags=True
+PhysicsHandleComponent.ComponentReplication=True
+PhysicsHandleComponent.Activation=True
+PhysicsHandleComponent.Cooking=True
+PhysicsHandleComponent.Events=True
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -1385,7 +1393,8 @@ TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+Object=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 
 
