--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=14FD0772462AD8D2E53A1188896106A8
+Description=(c) 2018 by James Mernin
 
 [StartupActions]
 bAddPacks=True
