--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,7 +75,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/Maps/Room1
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.05.05-20.10.30
+BuildingEscape.TimeStamp=2018.05.05-20.22.01
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.04.15-14.30.03
 PakFile.LastCompileMethod=Unknown
@@ -1324,63 +1324,63 @@ bShowMobileStats=False
 
 [DetailCustomWidgetExpansion]
 StaticMeshActor=StaticMeshActor.Collision.Collision,
-CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-EndUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-OculusHMDRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+GameplayTagsDeveloperSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+GameMapsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+MoviePlayerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+ProjectPackagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+HardwareTargetingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AssetManagerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AISystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AnimationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AudioSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+CollisionProfile=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+ConsoleSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+CookerSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+CrowdManager=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+EndUserSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+GameplayDebuggerConfig=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+GarbageCollectionSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+Engine=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+HierarchicalLODSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+InputSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+NavigationSystem=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+NetworkSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+PhysicsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+RendererSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+RendererOverrideSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+SlateSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+StreamingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+TutorialSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+UserInterfaceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+LevelEditor2DSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+EditorProjectAppearanceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+BlueprintEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+ClassViewerProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+ProxyLODMeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+MovieSceneToolsProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+MeshSimplificationSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+PaperImporterSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+UMGEditorProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AndroidRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+ShaderPlatformQualitySettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AndroidSDKSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+HTML5TargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+IOSRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+WindowsTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+AvfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+ImgMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+LevelSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+OculusHMDRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
+WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,
 
 [MaterialEditor]
 PrimType=1
